.metals/metals.log
2023.11.29 15:01:55 INFO  Started: Metals version 1.1.0 in folders 'D:\Моё\Учёба\Java\Scala' for client Visual Studio Code 1.84.2.
2023.11.29 15:01:57 WARN  Build server is not auto-connectable.
2023.11.29 15:01:57 WARN  no build tool detected in workspace 'D:\Моё\Учёба\Java\Scala'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.11.29 15:01:57 WARN  no build target for: D:\Моё\Учёба\Java\Scala\lessons\java\src\l20231018\Halloween.java
2023.11.29 15:02:02 INFO  no build target found for D:\Моё\Учёба\Java\Scala\lessons\java\src\l20231018\Halloween.java. Using presentation compiler with project's scala-library version: 3.3.1
2023.11.29 15:02:02 WARN  no build target for: D:\Моё\Учёба\Java\Scala\lessons\java\src\l20231018\Main.java
нояб. 29, 2023 3:02:02 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 11
нояб. 29, 2023 3:02:04 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 25
нояб. 29, 2023 3:02:04 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-04-737.md
нояб. 29, 2023 3:02:05 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-05-187.md
нояб. 29, 2023 3:02:07 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-07-471.md
нояб. 29, 2023 3:02:08 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-08-334.md
нояб. 29, 2023 3:02:08 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-08-452.md
нояб. 29, 2023 3:02:08 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-08-707.md
нояб. 29, 2023 3:02:09 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-09-739.md
нояб. 29, 2023 3:02:10 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-10-299.md
нояб. 29, 2023 3:02:12 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-12-801.md
нояб. 29, 2023 3:02:15 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: A severe compiler error occurred, full details of the error can be found in the error report D:\Моё\Учёба\Java\Scala\.metals\.reports\metals-full\2023-11-29\r_compiler-error_15-02-15-835.md
2023.11.29 15:02:58 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\2\src\main\scala\funsets\FunSets.scala
2023.11.29 15:03:02 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\2\src\main\scala\funsets\Main.scala
2023.11.29 15:04:33 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:05:51 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:08:24 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:12:20 ERROR Failed to tokenize input for semantic tokens for D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
scala.meta.tokenizers.TokenizeException: <input>:27: error: unclosed quoted identifier
    def balance`(chars: List[Char], openCount: Int): Boolean =
               ^
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.LegacyScanner.getBackquotedIdent(LegacyScanner.scala:489)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchToken(LegacyScanner.scala:337)
	at scala.meta.internal.tokenizers.LegacyScanner.nextToken(LegacyScanner.scala:211)
	at scala.meta.internal.tokenizers.LegacyScanner.foreach(LegacyScanner.scala:1011)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.uncachedTokenize(ScalametaTokenizer.scala:24)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.$anonfun$tokenize$1(ScalametaTokenizer.scala:17)
	at scala.collection.concurrent.TrieMap.getOrElseUpdate(TrieMap.scala:962)
	at scala.meta.internal.tokenizers.ScalametaTokenizer.tokenize(ScalametaTokenizer.scala:17)
	at scala.meta.internal.tokenizers.ScalametaTokenizer$$anon$2.apply(ScalametaTokenizer.scala:332)
	at scala.meta.tokenizers.Api$XtensionTokenizeDialectInput.tokenize(Api.scala:25)
	at scala.meta.tokenizers.Api$XtensionTokenizeInputLike.tokenize(Api.scala:14)
	at scala.meta.internal.metals.SemanticTokensProvider$.getTokens(SemanticTokensProvider.scala:28)
	at scala.meta.internal.metals.SemanticTokensProvider$.provide(SemanticTokensProvider.scala:89)
	at scala.meta.internal.metals.Compilers.$anonfun$semanticTokens$3(Compilers.scala:539)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.lang.Thread.run(Thread.java:842)

2023.11.29 15:13:34 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:14:12 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:15:36 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:17:03 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:17:37 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:19:26 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:20:44 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
нояб. 29, 2023 3:20:50 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.11.29 15:21:55 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
2023.11.29 15:22:06 WARN  no build target for: D:\Моё\Учёба\Java\Scala\tasks\scala\1\Main.scala
